welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:21: error: Boolean does not take parameters
    						{
                                                ^